--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#faq">FAQ</a></li>
                 <li><a href="#rules">Rules</a></li>
                 <li><a href="https://dunamisnexus.net" target="_blank">Main Site</a></li>
-                <li><a href="https://discord.gg/YOUR_DISCORD_INVITE" target="_blank" class="discord-link">Discord</a></li>
+                <li><a href="https://discord.gg/vbGcxAVZaB" target="_blank" class="discord-link">Discord</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
@@ -51,7 +51,7 @@
             <h2>About DunamisLAN</h2>
             <div class="about-content">
                 <p>Welcome to DunamisLAN, where we bring together gamers from the Dunamis Nexus community for unforgettable LAN party experiences. Whether you're into competitive esports, casual gaming, or just hanging out with fellow gamers, our events are designed to build community through shared passion for gaming.</p>
-                <p>Our LAN parties feature tournaments, open gaming sessions, prizes, and a welcoming atmosphere for players of all skill levels. Join us as we celebrate gaming, friendship, and faith-based community.</p>
+                <p>Our LAN parties feature a welcoming atmosphere for players of all skill levels. Join us as we celebrate gaming, friendship, and faith-based community.</p>
                 <blockquote>
                     "Therefore encourage one another and build one another up, just as you are doing." - 1 Thessalonians 5:11 (ESV)
                 </blockquote>
@@ -69,18 +69,46 @@
                     <!-- Place your images in the 'images/gallery/' folder -->
                     <!-- Name them: event1.jpg, event2.jpg, etc. -->
                     <div class="carousel-slide">
-                        <img src="images/gallery/event1.jpg" alt="Past LAN Event 1">
-                        <div class="carousel-caption">DunamisLAN Event</div>
+                        <img src="images/gallery/event1-1.jpg" alt="Past LAN Event 1">
+                        <div class="carousel-caption">DunamisLAN First Event</div>
                     </div>
                     <div class="carousel-slide">
-                        <img src="images/gallery/event2.jpg" alt="Past LAN Event 2">
-                        <div class="carousel-caption">DunamisLAN Event</div>
+                        <img src="images/gallery/event1-2.jpg" alt="Past LAN Event 2">
+                        <div class="carousel-caption">DunamisLAN First Event</div>
                     </div>
                     <div class="carousel-slide">
-                        <img src="images/gallery/event3.jpg" alt="Past LAN Event 3">
-                        <div class="carousel-caption">DunamisLAN Event</div>
+                        <img src="images/gallery/event1-3.jpg" alt="Past LAN Event 3">
+                        <div class="carousel-caption">DunamisLAN First Event</div>
                     </div>
                     <!-- Add more slides as needed -->
+                    <div class="carousel-slide">
+                        <img src="images/gallery/event1-4.jpg" alt="Past LAN Event 3">
+                        <div class="carousel-caption">DunamisLAN First Event</div>
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="images/gallery/event1-5.jpg" alt="Past LAN Event 3">
+                        <div class="carousel-caption">DunamisLAN First Event</div>
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="images/gallery/event2-1.jpg" alt="Past LAN Event 3">
+                        <div class="carousel-caption">DunamisLAN Fifth Event</div>
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="images/gallery/event2-2.jpg" alt="Past LAN Event 3">
+                        <div class="carousel-caption">DunamisLAN Fifth Event</div>
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="images/gallery/event2-3.jpg" alt="Past LAN Event 3">
+                        <div class="carousel-caption">DunamisLAN Fifth Event</div>
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="images/gallery/event2-4.jpg" alt="Past LAN Event 3">
+                        <div class="carousel-caption">DunamisLAN Fifth Event</div>
+                    </div>
+                    <div class="carousel-slide">
+                        <img src="images/gallery/event2-5.jpg" alt="Past LAN Event 3">
+                        <div class="carousel-caption">DunamisLAN Fifth Event</div>
+                    </div>
                 </div>
                 <button class="carousel-btn prev" onclick="moveSlide(-1)">&#10094;</button>
                 <button class="carousel-btn next" onclick="moveSlide(1)">&#10095;</button>
@@ -96,10 +124,10 @@
             <div class="register-content">
                 <div class="event-info">
                     <h3>Next Event</h3>
-                    <p class="event-date">📅 Date: TBA</p>
-                    <p class="event-location">📍 Location: TBA</p>
-                    <p class="event-cost">💵 Cost: TBA</p>
-                    <p class="event-capacity">👥 Capacity: TBA</p>
+                    <p class="event-date">📅 Date: January 31st</p>
+                    <p class="event-location">📍 Location: Founders Hall(New Knoxville, Ohio)</p>
+                    <p class="event-cost">💵 Cost: Accepting Donations</p>
+                    <p class="event-capacity">👥 Capacity: 30 people, only 12 PC slots, the rest is console</p>
                 </div>
                 
                 <!-- INSTRUCTIONS: Choose ONE of these registration options -->
@@ -114,7 +142,7 @@
                 
                 <!-- OPTION 2: External Registration Link -->
                 <div class="registration-buttons">
-                    <a href="https://YOUR_REGISTRATION_LINK_HERE" target="_blank" class="btn btn-primary btn-large">Register via LANReg</a>
+                    <a href="https://www.lanreg.org/dunamisnexus/dunamislanjanuary2026" target="_blank" class="btn btn-primary btn-large">Register via LANReg</a>
                     <!-- OR Google Forms link -->
                     <!-- <a href="https://forms.gle/YOUR_FORM_LINK" target="_blank" class="btn btn-primary btn-large">Register via Google Forms</a> -->
                 </div>
@@ -122,13 +150,13 @@
                 <!-- Payment/Donation Options -->
                 <div class="payment-section">
                     <h3>Support DunamisLAN</h3>
-                    <p>Help us cover venue costs and prizes!</p>
+                    <p>Support us!</p>
                     <div class="payment-buttons">
                         <a href="https://ko-fi.com/dunamisnexus" target="_blank" class="btn btn-kofi">
                             <svg width="20" height="20" viewBox="0 0 24 24" fill="currentColor"><path d="M23.881 8.948c-.773-4.085-4.859-4.593-4.859-4.593H.723c-.604 0-.679.798-.679.798s-.082 7.324-.022 11.822c.164 2.424 2.586 2.672 2.586 2.672s8.267-.023 11.966-.049c2.438-.426 2.683-2.566 2.658-3.734 4.352.24 7.422-2.831 6.649-6.916zm-11.062 3.511c-1.246 1.453-4.011 3.976-4.011 3.976s-.121.119-.31.023c-.076-.057-.108-.09-.108-.09-.443-.441-3.368-3.049-4.034-3.954-.709-.965-1.041-2.7-.091-3.71.951-1.01 3.005-1.086 4.363.407 0 0 1.565-1.782 3.468-.963 1.904.82 1.832 3.011.723 4.311zm6.173.478c-.928.116-1.682.028-1.682.028V7.284h1.77s1.971.551 1.971 2.638c0 1.913-.985 2.667-2.059 3.015z"/></svg>
                             Support on Ko-fi
                         </a>
-                        <a href="https://paypal.me/YOUR_PAYPAL" target="_blank" class="btn btn-paypal">
+                        <a href="paypal.me/dunamisnexusnet" target="_blank" class="btn btn-paypal">
                             Pay with PayPal
                         </a>
                     </div>
@@ -144,10 +172,10 @@
             <div class="schedule-grid">
                 <!-- INSTRUCTIONS: Update times and activities for your event -->
                 <div class="schedule-item">
-                    <div class="schedule-time">9:00 AM</div>
+                    <div class="schedule-time">8:00 AM</div>
                     <div class="schedule-activity">
                         <h3>Check-in & Setup</h3>
-                        <p>Arrive, get your badge, and set up your gaming station</p>
+                        <p>Arrive, and set up your gaming station</p>
                     </div>
                 </div>
                 <div class="schedule-item">
@@ -168,14 +196,21 @@
                     <div class="schedule-time">12:00 PM</div>
                     <div class="schedule-activity">
                         <h3>Lunch Break</h3>
-                        <p>Food provided or BYOF (Bring Your Own Food)</p>
+                        <p>Limited snacks, BYOF (Bring Your Own Food)</p>
+                    </div>
+                </div>
+                <div class="schedule-item">
+                    <div class="schedule-time">12:45 PM</div>
+                    <div class="schedule-activity">
+                        <h3>Bible Bite</h3>
+                        <p>A short inspirational sharing.</p>
                     </div>
                 </div>
                 <div class="schedule-item">
                     <div class="schedule-time">1:00 PM</div>
                     <div class="schedule-activity">
-                        <h3>Tournament Round 1</h3>
-                        <p>Competitive gaming begins!</p>
+                        <h3>Tournament</h3>
+                        <p>Halo MCC Slayer</p>
                     </div>
                 </div>
                 <div class="schedule-item">
@@ -188,8 +223,8 @@
                 <div class="schedule-item">
                     <div class="schedule-time">5:00 PM</div>
                     <div class="schedule-activity">
-                        <h3>Awards & Closing</h3>
-                        <p>Prize distribution and final announcements</p>
+                        <h3>Closing comments</h3>
+                        <p>Final announcements, more Free gaming!</p>
                     </div>
                 </div>
             </div>
@@ -288,7 +323,7 @@
                     <h3>Main Website</h3>
                     <p>Visit Dunamis Nexus</p>
                 </a>
-                <a href="https://discord.gg/YOUR_DISCORD_INVITE" target="_blank" class="link-card">
+                <a href="https://discord.gg/vbGcxAVZaB" target="_blank" class="link-card">
                     <div class="link-icon">💬</div>
                     <h3>Discord</h3>
                     <p>Join our community</p>
