--- a/index.html
+++ b/index.html
@@ -83,31 +83,31 @@
                     <!-- Add more slides as needed -->
                     <div class="carousel-slide">
                         <img src="images/gallery/event1-4.jpg" alt="Past LAN Event 3">
-                        <div class="carousel-caption">DunamisLAN First Event</div>
+                    <!--    <div class="carousel-caption">DunamisLAN First Event</div> -->
                     </div>
                     <div class="carousel-slide">
                         <img src="images/gallery/event1-5.jpg" alt="Past LAN Event 3">
-                        <div class="carousel-caption">DunamisLAN First Event</div>
+                   <!--     <div class="carousel-caption">DunamisLAN First Event</div> -->
                     </div>
-                    <div class="carousel-slide">
+                   <!-- <div class="carousel-slide">
                         <img src="images/gallery/event2-1.jpg" alt="Past LAN Event 3">
                         <div class="carousel-caption">DunamisLAN Fifth Event</div>
                     </div>
                     <div class="carousel-slide">
                         <img src="images/gallery/event2-2.jpg" alt="Past LAN Event 3">
                         <div class="carousel-caption">DunamisLAN Fifth Event</div>
-                    </div>
+                    </div> -->
                     <div class="carousel-slide">
                         <img src="images/gallery/event2-3.jpg" alt="Past LAN Event 3">
-                        <div class="carousel-caption">DunamisLAN Fifth Event</div>
+                    <!--    <div class="carousel-caption">DunamisLAN Fifth Event</div> -->
                     </div>
                     <div class="carousel-slide">
                         <img src="images/gallery/event2-4.jpg" alt="Past LAN Event 3">
-                        <div class="carousel-caption">DunamisLAN Fifth Event</div>
+                    <!--    <div class="carousel-caption">DunamisLAN Fifth Event</div> -->
                     </div>
                     <div class="carousel-slide">
                         <img src="images/gallery/event2-5.jpg" alt="Past LAN Event 3">
-                        <div class="carousel-caption">DunamisLAN Fifth Event</div>
+                    <!--    <div class="carousel-caption">DunamisLAN Fifth Event</div> -->
                     </div>
                 </div>
                 <button class="carousel-btn prev" onclick="moveSlide(-1)">&#10094;</button>
