--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DunamisLAN - Gaming Events by Dunamis Nexus</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="/images/favicon.png" />
 </head>
 <body>
     <!-- Navigation -->
