--- a/index.html
+++ b/index.html
@@ -71,15 +71,15 @@
                     <!-- Name them: event1.jpg, event2.jpg, etc. -->
                     <div class="carousel-slide">
                         <img src="images/gallery/event1-1.jpg" alt="Past LAN Event 1">
-                        <div class="carousel-caption">DunamisLAN First Event</div>
+                    <!--    <div class="carousel-caption">DunamisLAN First Event</div> -->
                     </div>
                     <div class="carousel-slide">
                         <img src="images/gallery/event1-2.jpg" alt="Past LAN Event 2">
-                        <div class="carousel-caption">DunamisLAN First Event</div>
+                    <!--    <div class="carousel-caption">DunamisLAN First Event</div> -->
                     </div>
                     <div class="carousel-slide">
                         <img src="images/gallery/event1-3.jpg" alt="Past LAN Event 3">
-                        <div class="carousel-caption">DunamisLAN First Event</div>
+                    <!--    <div class="carousel-caption">DunamisLAN First Event</div> -->
                     </div>
                     <!-- Add more slides as needed -->
                     <div class="carousel-slide">
