--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <p class="event-date">📅 Date: January 31st</p>
                     <p class="event-location">📍 Location: Founders Hall(New Knoxville, Ohio)</p>
                     <p class="event-cost">💵 Cost: Accepting Donations</p>
-                    <p class="event-capacity">👥 Capacity: 30 people, only 12 PC slots, the rest is console</p>
+                    <p class="event-capacity">👥 Capacity: 30 people, only 12 PC slots, the rest are console</p>
                 </div>
                 
                 <!-- INSTRUCTIONS: Choose ONE of these registration options -->
@@ -169,7 +169,7 @@
     <!-- Schedule Section -->
     <section id="schedule" class="section schedule-section">
         <div class="container">
-            <h2>Event Schedule</h2>
+            <h2>Event Schedule 01/31/2026</h2>
             <div class="schedule-grid">
                 <!-- INSTRUCTIONS: Update times and activities for your event -->
                 <div class="schedule-item">
