--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/png" href="/images/favicon.png" />
 </head>
+    <div id="top"></div>
 <body>
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
-            <div class="nav-brand">
+            <a href="#top" class="nav-brand">
                 <img src="images/logo.png" alt="Dunamis Nexus Logo" class="nav-logo">
                 <span class="nav-title">DunamisLAN</span>
             </div>
