--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Navigation -->
     <nav class="navbar">
         <div class="container">
+            <div class="nav-brand">
             <a href="#top" class="nav-brand">
                 <img src="images/logo.png" alt="Dunamis Nexus Logo" class="nav-logo">
                 <span class="nav-title">DunamisLAN</span>
