--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="nav-brand">
                 <a href="#top" class="logo-link">
-                   <img src="images/logo.png" alt="Dunamis Nexus Logo" class="nav-logo">
+                   <img src="images/logo.png" alt="Dunamis Nexus Logo" class="nav-logo"> </a>
                 <span class="nav-title">DunamisLAN</span>
             </div>
             <ul class="nav-menu">
