--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
-                <a href="#top" class="logo-link">
+                <a href="#top">
                    <img src="images/logo.png" alt="Dunamis Nexus Logo" class="nav-logo"> </a>
                 <span class="nav-title">DunamisLAN</span>
             </div>
