--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#faq">FAQ</a></li>
                 <li><a href="#rules">Rules</a></li>
                 <li><a href="https://dunamisnexus.net" target="_blank">Main Site</a></li>
-                <li><a href="https://discord.gg/vbGcxAVZaB" target="_blank" class="discord-link">Discord</a></li>
+                <li><a href="https://discord.gg/vbGcxAVZaB" target="_blank" class="discord-link">LAN-Discord</a></li>
             </ul>
             <div class="hamburger">
                 <span></span>
