--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                 </a>
                 <a href="https://discord.gg/vbGcxAVZaB" target="_blank" class="link-card">
                     <div class="link-icon">💬</div>
-                    <h3>Discord</h3>
+                    <h3>LAN-Discord</h3>
                     <p>Join our community</p>
                 </a>
                 <a href="https://forum.dunamisnexus.net" target="_blank" class="link-card">
