--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 <a href="https://discord.gg/vbGcxAVZaB" target="_blank" class="link-card">
                     <div class="link-icon">💬</div>
                     <h3>LAN-Discord</h3>
-                    <p>Join our community</p>
+                    <p>Our LAN Party Server</p>
                 </a>
                 <a href="https://forum.dunamisnexus.net" target="_blank" class="link-card">
                     <div class="link-icon">📝</div>
